--- a/angular/reimbursement-app/src/app/home/home.component.html
+++ b/angular/reimbursement-app/src/app/home/home.component.html
@@ -45,12 +45,7 @@
 
   <button class="btn btn-primary px-3 mx-3" (click)="onAdd()">ADD</button>
 
-  <button
-    type="submit"
-    value="submit"
-    class="btn btn-success px-3 mx-3"
-    (click)="onSave()"
-  >
+  <button type="submit" class="btn btn-success px-3 mx-3">
     Save
   </button>
 </form>
