--- a/angular/reimbursement-app/reimbursement-appv2/src/app/homecomponent/homecomponent.component.html
+++ b/angular/reimbursement-app/reimbursement-appv2/src/app/homecomponent/homecomponent.component.html
@@ -1,55 +1,108 @@
 <div class="container mt-5">
-  
-
-  <div *ngIf="showInputs" class="mt-3">
-    <h4>Enter Reimbursements:</h4>
-    <form #reimbursementForm="ngForm" (ngSubmit)="onSubmit()">
-      <div *ngFor="let reimbursement of reimbursements; let i = index">
-        <input
-          type="number"
-          class="form-control"
-          name="id{{ i }}"
-          [(ngModel)]="reimbursement.id"
-          placeholder="Enter ID"
-        />
+  <h4>Enter Reimbursements:</h4>
+  <form #reimbursementForm="ngForm" (ngSubmit)="onSubmit()">
+    <div ngModelGroup="userData" class="row">
+      <div class="col">
         <input
           type="text"
           class="form-control"
-          name="name{{ i }}"
-          [(ngModel)]="reimbursement.name"
-          placeholder="Enter Name"
+          placeholder="Enter emp id"
+          [(ngModel)]="userData.empId"
+          name="id"
         />
-        <input
-          type="number"
-          class="form-control"
-          name="amount{{ i }}"
-          [(ngModel)]="reimbursement.amount"
-          placeholder="Enter Amount"
-        />
-        <select
-          name="type{{ i }}"
-          placeholder="Choose one"
-          [(ngModel)]="reimbursement.type"
-          class="form-control"
-        >
-          <option value="" selected disabled>Select a mode</option>
-          <option value="debit">Debit</option>
-          <option value="credit">Credit</option>
-        </select>
-        <button
-          type="button"
-          class="btn btn-danger"
-          (click)="deleteReimbursement(i)"
-        >
-          Delete
-        </button>
       </div>
-      <button type="submit" class="btn btn-success mt-3">
+      <div class="col">
+        <input
+          type="text"
+          class="form-control"
+          placeholder="Enter emp name"
+          [(ngModel)]="userData.empName"
+          name="name"
+        />
+      </div>
+      <div class="col">
+        <input
+          type="text"
+          class="form-control"
+          placeholder="Enter emp desg"
+          [(ngModel)]="userData.empDesg"
+          name="desg"
+        />
+      </div>
+    </div>
+    <!-- <div>
+      <p>Employee ID : {{ emp_id }}</p>
+      <p>Employee Name : {{ emp_name }}</p>
+      <p>Employee Designation : {{ emp_desg }}</p>
+    </div> -->
+    <div class="mt-3" ngModelGroup="userDetails">
+      <div
+        class="row mt-2"
+        *ngFor="let reimbursement of userData.reimbursement; let i = index"
+      >
+        <div class="col">
+          <input
+            class="form-control"
+            type="number"
+            name="id{{ i }}"
+            [(ngModel)]="reimbursement.id"
+            placeholder="Enter ID"
+          />
+        </div>
+        <div class="col">
+          <input
+            class="form-control"
+            type="text"
+            name="name{{ i }}"
+            [(ngModel)]="reimbursement.name"
+            placeholder="Enter Name"
+          />
+        </div>
+        <div class="col">
+          <input
+            class="form-control"
+            type="number"
+            name="amount{{ i }}"
+            [(ngModel)]="reimbursement.amount"
+            placeholder="Enter Amount"
+          />
+        </div>
+        <div class="col">
+          <select
+            class="form-control"
+            name="type{{ i }}"
+            [(ngModel)]="reimbursement.type"
+          >
+            <option value="" selected disabled>Select a mode</option>
+            <option value="debit">Debit</option>
+            <option value="credit">Credit</option>
+          </select>
+        </div>
+
+        <div class="col">
+          <button
+            class="form-control"
+            type="button"
+            class="btn btn-danger"
+            (click)="deleteReimbursement(i)"
+            [ngClass]="{ 'display-none': userData.reimbursement.length == 1 }"
+          >
+            Delete
+          </button>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <button
+        type="button"
+        class="btn btn-primary m-3 p-2"
+        (click)="addReimbursement()"
+      >
+        Add Reimbursement
+      </button>
+      <button type="submit" class="btn btn-success m-3 p-2">
         Save Reimbursements
       </button>
-    </form>
-  </div>
-  <button type="button" class="btn btn-primary" (click)="addReimbursement()">
-    Add Reimbursement
-  </button>
+    </div>
+  </form>
 </div>
