--- a/angular/reimbursement-app/reimbursement-appv2/src/app/home-component/home-component.component.html
+++ b/angular/reimbursement-app/reimbursement-appv2/src/app/home-component/home-component.component.html
@@ -10,6 +10,8 @@
           placeholder="Enter emp id"
           [(ngModel)]="userData.empId"
           name="id"
+          #id="ngModel"
+          required
         />
       </div>
       <div class="col">
@@ -19,6 +21,8 @@
           placeholder="Enter emp name"
           [(ngModel)]="userData.empName"
           name="name"
+          #name="ngModel"
+          required
         />
       </div>
       <div class="col">
@@ -28,6 +32,8 @@
           placeholder="Enter emp desg"
           [(ngModel)]="userData.empDesg"
           name="desg"
+          #desg="ngModel"
+          required
         />
       </div>
     </div>
@@ -44,6 +50,7 @@
             name="id{{ i }}"
             [(ngModel)]="reimbursement.id"
             placeholder="Enter ID"
+            required
           />
         </div>
         <div class="col">
@@ -53,6 +60,7 @@
             name="name{{ i }}"
             [(ngModel)]="reimbursement.name"
             placeholder="Enter Name"
+            required
           />
         </div>
         <div class="col">
@@ -62,6 +70,7 @@
             name="amount{{ i }}"
             [(ngModel)]="reimbursement.amount"
             placeholder="Enter Amount"
+            required
           />
         </div>
         <div class="col">
@@ -97,7 +106,11 @@
       >
         Add Reimbursement
       </button>
-      <button type="submit" class="btn btn-success m-3 p-2">
+      <button
+        type="submit"
+        class="btn btn-success m-3 p-2"
+        [disabled]="!name.valid || !id.valid || !desg.valid"
+      >
         Save Reimbursements
       </button>
     </div>
