--- a/angular/section 15/reactive form/src/app/app.component.html
+++ b/angular/section 15/reactive form/src/app/app.component.html
@@ -46,6 +46,8 @@
             }}
           </label>
         </div>
+
+        <!-- hobbies -->
         <div formArrayName="hobbies">
           <h4>Your hobbies</h4>
           <button class="btn btn-default" type="button" (click)="onAddHobby()">
