--- a/angular/recipe-app-2/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/angular/recipe-app-2/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-12">
-    <form>
+    <form (ngSubmit)="onSubmit(shoppingForm)" #shoppingForm="ngForm">
       <div class="row">
         <div class="col-sm-5 form-group">
           <label for="name">Name</label>
@@ -8,7 +8,11 @@
             type="text"
             id="name"
             class="form-control"
-            #nameInput>
+            #nameInput
+            name="name"
+            required
+            ngModel
+          />
         </div>
         <div class="col-sm-2 form-group">
           <label for="amount">Amount</label>
@@ -16,14 +20,34 @@
             type="number"
             id="amount"
             class="form-control"
-            #amountInput>
+            #amountInput
+            name="amount"
+            pattern="^[1-9]+[0-9]*$"
+            required
+            ngModel
+          />
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <button class="btn btn-success" type="submit" (click)="onAddItem()">Add</button>
-          <button class="btn btn-danger" type="button">Delete</button>
-          <button class="btn btn-primary" type="button">Clear</button>
+          <button
+            class="btn btn-success"
+            type="submit"
+            [disabled]="!shoppingForm.valid"
+          >
+            {{ editingMode ? "Update" : "Add" }}
+          </button>
+          <button
+            class="btn btn-danger"
+            type="button"
+            [disabled]="!editingMode"
+            (click)="onDeleteItem()"
+          >
+            Delete
+          </button>
+          <button class="btn btn-primary" type="button" (click)="onClear()">
+            Clear
+          </button>
         </div>
       </div>
     </form>
