--- a/angular/reimbursement-app/reimbursement-appv2/src/app/home-component/home-component.component.html
+++ b/angular/reimbursement-app/reimbursement-appv2/src/app/home-component/home-component.component.html
@@ -91,7 +91,7 @@
             type="button"
             class="btn btn-danger"
             (click)="deleteReimbursement(i)"
-            [ngClass]="{ 'display-none': userData.reimbursement.length === 1 }"
+            *ngIf="userData.reimbursement.length > 1"
           >
             Delete
           </button>
