--- a/angular/section 15/reactive form/src/app/app.component.html
+++ b/angular/section 15/reactive form/src/app/app.component.html
@@ -17,8 +17,17 @@
                 !signupForm.get('userData.username').valid &&
                 signupForm.get('userData.username').touched
               "
-              >Please enter a valid username</span
-            >
+              ><span
+                *ngIf="
+                  signupForm.get('userData.username').errors['nameIsForbidden']
+                "
+                >This name is invalid</span
+              >
+              <span
+                *ngIf="signupForm.get('userData.username').errors['required']"
+                >This name is required field</span
+              >
+            </span>
           </div>
           <div class="form-group">
             <label for="email">email</label>
@@ -50,15 +59,7 @@
         <!-- hobbies -->
         <div formArrayName="hobbies">
           <h4>Your hobbies</h4>
-          <button class="btn btn-default" type="button" (click)="onAddHobby()">
-            Add Hobby
-          </button>
-          <div
-            class="form-group"
-            *ngFor="let hobbyControl of controls; let i = index"
-          >
-            <input type="text" class="form-control" [formControlName]="i" />
-          </div>
+          <button class="btn btn-default" type="button">Add Hobby</button>
         </div>
         <span *ngIf="!signupForm.valid && signupForm.touched" class="help-block"
           >Please enter valid data</span
