able to fetch course data

--- a/angular/online learning system/src/app/components/cart/cart.component.html
+++ b/angular/online learning system/src/app/components/cart/cart.component.html
@@ -1,10 +1,10 @@
 <div class="container">
   <div class="card flex-row flex-wrap">
-    <div>
+    <div class="card-image">
       <img
         src="../../../assets/courses/python-course-image.png"
         alt="course image"
-        width="300px"
+        width="400px"
         height="300px"
       />
     </div>
