--- a/angular/online learning system/src/app/components/courses/course/course.component.html
+++ b/angular/online learning system/src/app/components/courses/course/course.component.html
@@ -1,9 +1,10 @@
 <div class="course">
-  <div class="card" style="width: 18rem">
+  <div class="card">
     <img
       class="card-img-top"
       src="../../../assets/courses/python-course-image.png"
       alt="Card image cap"
+      height="250px"
     />
     <div class="card-body">
       <h4 class="card-title">Python for beginners</h4>
@@ -22,11 +23,12 @@
       </div>
     </div>
   </div>
-  <div class="card" style="width: 18rem">
+  <div class="card">
     <img
       class="card-img-top"
       src="../../../assets/courses/python-course-image.png"
       alt="Card image cap"
+      height="250px"
     />
     <div class="card-body">
       <h4 class="card-title">Python for beginners</h4>
@@ -45,11 +47,12 @@
       </div>
     </div>
   </div>
-  <div class="card" style="width: 18rem">
+  <div class="card">
     <img
       class="card-img-top"
       src="../../../assets/courses/python-course-image.png"
       alt="Card image cap"
+      height="250px"
     />
     <div class="card-body">
       <h4 class="card-title">Python for beginners</h4>
