--- a/angular/online learning system/src/app/components/courses/courses.component.html
+++ b/angular/online learning system/src/app/components/courses/courses.component.html
@@ -13,14 +13,15 @@
   <!-- courses -->
   <div class="course-section">
     <!-- filter in the left -->
-    <!-- <div class="filter">this is our filter section</div> -->
-
-    <!-- courses list -->
-    <div class="courses">
-      <h2>Top course for you</h2>
-      <hr />
-      <div>
-        <app-course></app-course>
+    <div class="course-container">
+      <!-- courses list -->
+      <div class="filter">this is our filter section</div>
+      <div class="courses">
+        <h2>Top course for you</h2>
+        <hr />
+        <div>
+          <app-course></app-course>
+        </div>
       </div>
     </div>
   </div>
