--- a/angular/online learning system/src/app/components/login/login.component.html
+++ b/angular/online learning system/src/app/components/login/login.component.html
@@ -12,6 +12,7 @@
             id="username"
             name="username"
             ngModel
+            value="naugs"
           />
         </div>
 
@@ -24,6 +25,7 @@
             class="form-style"
             name="password"
             ngModel
+            value="1234"
           />
         </div>
 
