--- a/angular/online learning system/src/app/components/courses/course/course.component.css
+++ b/angular/online learning system/src/app/components/courses/course/course.component.css
@@ -1,10 +1,22 @@
 .card {
   background-color: #161d29;
   color: white;
+  /* height: 500px; */
+  width: 350px;
 }
+
+.card:hover {
+  transition: all 0.4s ease-in-out;
+  box-shadow: 0px 4px 10px 10px #303f5b;
+}
+
 .card-text {
   font-size: 30px;
   font-weight: 400;
+}
+
+.card-body {
+  margin-top: 20px;
 }
 
 .buy-now {
@@ -29,8 +41,7 @@
 .course {
   display: flex;
   flex-wrap: wrap;
-
-  gap: 50px;
+  gap: 80px;
   margin-top: 50px;
 }
 
