--- a/angular/online learning system/src/app/components/header/header.component.css
+++ b/angular/online learning system/src/app/components/header/header.component.css
@@ -20,3 +20,12 @@ a:hover {
   padding: 20px;
   font-size: 20px;
 }
+
+.login-btn,
+.logout-btn {
+  text-decoration: none;
+  color: #afb2bf;
+  background-color: #161d29;
+  border: none;
+  font-size: 20px;
+}
