--- a/angular/online learning system/src/app/components/home/home.component.html
+++ b/angular/online learning system/src/app/components/home/home.component.html
@@ -25,14 +25,17 @@
     <div class="courses-card">
       <app-course></app-course>
     </div>
-    <button class="explore">Explore all courses</button>
+    <button class="explore" routerLink="/courses">Explore all courses</button>
   </div>
 
   <!-- feedbacks -->
   <hr class="hr" />
 
   <div class="feedback-section">
-    <h2>Look what others have to <span class="feedback-heading">say about us</span></h2>
+    <h2>
+      Look what others have to
+      <span class="feedback-heading">say about us</span>
+    </h2>
     <div class="courses-feedback">
       <div class="courses-feedback">
         <div class="course-feedback">a</div>
