--- a/angular/online learning system/src/app/components/cart/cart.component.css
+++ b/angular/online learning system/src/app/components/cart/cart.component.css
@@ -1,49 +1,51 @@
 .container {
-  margin: 50px;
+  margin: 100px;
+  width: 100%;
   display: flex;
+  gap: 25px;
   flex-direction: column;
-  gap: 20px;
 }
-
 .card {
   background-color: #161d29;
-  width: 80%;
   color: white;
+  width: 60%;
   display: flex;
-  gap: 50px;
+  flex-direction: row;
 }
 
-.card-block {
-  margin-top: 20px;
+.card-img {
+  width: 300px;
 }
 
-.card {
-  background-color: #161d29;
-  margin-left: 15%;
-  color: white;
-}
 .card-text {
   font-size: 30px;
   font-weight: 400;
 }
 
-.buy-now {
+.card-body {
+  margin-left: 20px;
+}
+
+.btn {
   background-color: rgba(255, 214, 10, 0.882);
   padding: 10px;
   color: rgba(1, 9, 20, 255);
   font-weight: bold;
   border: none;
   border-radius: 5px;
+  margin-right: 25px;
+  margin-top: 25px;
 }
-
-.purchase-options {
-  margin-top: 20px;
-}
-
 .stars {
-  color: rgba(255, 214, 10, 0.882);
+  display: inline-block;
 }
 
-.star {
-  margin-left: 3px;
+.fa-star {
+  color: #ddd;
+  font-size: 16px;
+  margin-right: 5px;
+}
+
+.fa-star.filled {
+  color: #f1c40f;
 }
