--- a/angular/online learning system/src/app/components/courses/course/course.component.css
+++ b/angular/online learning system/src/app/components/courses/course/course.component.css
@@ -42,7 +42,6 @@
   display: flex;
   flex-wrap: wrap;
   gap: 80px;
-  margin-top: 50px;
 }
 
 .purchase-options {
@@ -50,9 +49,15 @@
 }
 
 .stars {
-  color: rgba(255, 214, 10, 0.882);
+  display: inline-block;
 }
 
-.star {
-  margin-left: 3px;
+.fa-star {
+  color: #ddd;
+  font-size: 16px;
+  margin-right: 5px;
+}
+
+.fa-star.filled {
+  color: #f1c40f;
 }
