--- a/angular/online learning system/src/app/components/courses/course/course.component.html
+++ b/angular/online learning system/src/app/components/courses/course/course.component.html
@@ -18,7 +18,9 @@
       </div>
       <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
       <div class="purchase-options">
-        <button class="add-to-cart" (click)="addTocart(course)">Add to Cart</button>
+        <button class="add-to-cart" (click)="addTocart(course)">
+          Add to Cart
+        </button>
         <button class="buy-now">Buy now</button>
       </div>
     </div>
