--- a/angular/online learning system/src/app/components/courses/courses.component.html
+++ b/angular/online learning system/src/app/components/courses/courses.component.html
@@ -3,12 +3,14 @@
     <input
       class="form-style"
       type="text"
-      placeholder="Search for anything"
+      placeholder="Search for coures..."
       id="searchtext"
       name="searchtext"
-      ngModel
+      [(ngModel)]="searchtext"
+      (keyup)="onSearchChange()"
+      #searchInput
     />
-    <button class="btn">Search</button>
+    <button (click)="onSearchClick()" class="btn">Search</button>
   </div>
   <!-- courses -->
   <div class="course-section">
@@ -21,7 +23,7 @@
         <hr />
         <div class="course-card">
           <app-course
-            *ngFor="let courseEl of courses; let i = index"
+            *ngFor="let courseEl of filteredCourse; let i = index"
             [course]="courseEl"
             [index]="i"
           ></app-course>
