--- a/angular/online learning system/src/app/components/courses/courses.component.html
+++ b/angular/online learning system/src/app/components/courses/courses.component.html
@@ -17,9 +17,11 @@
     <!-- filter in the left -->
     <div class="course-container">
       <!-- courses list -->
-      <div class="filter">this is our filter section</div>
+      <div class="filter">
+        <app-course-filter></app-course-filter>
+      </div>
       <div class="courses">
-        <h2>Top course for you</h2>
+        <h2>A broad selection of courses</h2>
         <hr />
         <div class="course-card">
           <app-course
