--- a/angular/online learning system/src/app/components/courses/courses.component.css
+++ b/angular/online learning system/src/app/components/courses/courses.component.css
@@ -2,8 +2,6 @@
   margin-top: 50px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-items: center;
 }
 
 .course-section {
@@ -13,10 +11,8 @@
 }
 
 .filter {
-  height: 40vh;
   width: 20%;
   margin: 8% 30px;
-  background-color: #161d29;
 }
 
 input[type="text"],
@@ -67,5 +63,5 @@ select {
   width: 100%;
   display: flex;
   align-items: start;
-  justify-items: center;
+  justify-items: start;
 }
