--- a/angular/online learning system/src/app/components/header/header.component.css
+++ b/angular/online learning system/src/app/components/header/header.component.css
@@ -26,14 +26,26 @@ button:hover {
   font-size: 20px;
 }
 
-.login-btn,
-.logout-btn {
+.page-header-login-logout > a {
+  display: flex;
+  justify-items: space-between;
+  align-items: center;
+}
+
+.login-btn {
   text-decoration: none;
   color: #afb2bf;
   background-color: #161d29;
   border: none;
   font-size: 20px;
 }
+
+/* .header-right {
+  display: flex;
+  align-items: center;
+  justify-items: center;
+  margin-bottom: 100px;
+} */
 
 .cart {
   text-decoration: none;
@@ -42,4 +54,47 @@ button:hover {
   border: none;
   font-size: 20px;
   margin-right: 20px;
+}
+
+.profile-logo {
+  /* margin-bottom: 20px; */
+  cursor: pointer;
+}
+
+.profile-container {
+  border-radius: 7px;
+  display: flex;
+  flex-direction: column;
+  width: 15%;
+  position: absolute;
+  top: 10%;
+  left: 84%;
+  text-decoration: none;
+  /* background-color: #161d29; */
+}
+
+.profile-btn {
+  background-color: #161d29;
+  border: none;
+  color: white;
+  padding: 5px;
+}
+
+.mentor {
+  border-top: 1px solid #2c333f;
+}
+
+.my-learning {
+  border-top: 1px solid #2c333f;
+  border-bottom: 1px solid #2c333f;
+}
+
+.admin {
+  border-top-left-radius: 7px;
+  border-top-right-radius: 7px;
+}
+
+.logout {
+  border-bottom-left-radius: 7px;
+  border-bottom-right-radius: 7px;
 }
