added the admin dashboard and pagination

--- a/angular/online learning system/src/app/components/cart/cart.component.html
+++ b/angular/online learning system/src/app/components/cart/cart.component.html
@@ -1,10 +1,9 @@
-
 <div class="container">
   <div class="card" *ngFor="let course of cart; let j = index">
     <div class="card-img">
       <img
         class="card-img-top"
-        src="../../../assets/courses/python-course-image.png"
+        src="../../../assets/courses/onlinecourse2.webp"
         alt="Card image cap"
         height="250px"
       />
