--- a/angular/online learning system/src/app/components/courses/courses.component.html
+++ b/angular/online learning system/src/app/components/courses/courses.component.html
@@ -3,7 +3,7 @@
     <input
       class="form-style"
       type="text"
-      placeholder="Search for coures..."
+      placeholder="Search for courses..."
       id="searchtext"
       name="searchtext"
       [(ngModel)]="searchtext"
