--- a/angular/online learning system/src/app/components/home/home.component.html
+++ b/angular/online learning system/src/app/components/home/home.component.html
@@ -22,9 +22,10 @@
   <div class="courses-section">
     <h2>Unlock the <span class="courses-heading">Power of Code</span></h2>
     <p class="courses-sub-heading">Learn to build anything you can imagine</p>
-    <div class="courses-card">
+    <!-- make an api call here for the courses card in the very beginnning -->
+    <!-- <div class="courses-card">
       <app-course></app-course>
-    </div>
+    </div> -->
     <button class="explore" routerLink="/courses">Explore all courses</button>
   </div>
 
