--- a/angular/online learning system/src/app/app.component.html
+++ b/angular/online learning system/src/app/app.component.html
@@ -3,4 +3,5 @@
 <!-- <app-signup></app-signup> -->
 <!-- <app-home></app-home> -->
 <router-outlet></router-outlet>
+<app-footer></app-footer>
 <ng-toast [style]="{ color: 'black',  }"></ng-toast>
