--- a/angular/online learning system/src/app/components/courses/course/course.component.html
+++ b/angular/online learning system/src/app/components/courses/course/course.component.html
@@ -2,7 +2,7 @@
   <div class="card">
     <img
       class="card-img-top"
-      src="../../../assets/courses/python-course-image.png"
+      src="../../../assets/courses/onlinecourse2.webp"
       alt="Card image cap"
       height="250px"
     />
@@ -21,6 +21,10 @@
           Add to Cart
         </button>
         <button class="buy-now">Buy now</button>
+      </div>
+      <div class="approval-options" *ngIf="isOnAdminPage()">
+        <button class="approve">Approve</button>
+        <button class="reject">Reject</button>
       </div>
     </div>
   </div>
