--- a/angular/online learning system/src/app/components/courses/courses.component.html
+++ b/angular/online learning system/src/app/components/courses/courses.component.html
@@ -30,6 +30,9 @@
             [index]="i"
           ></app-course>
         </div>
+        <button class="load-more" (click)="loadMoreCourses()">
+          Load more courses
+        </button>
       </div>
     </div>
   </div>
