--- a/angular/online learning system/src/app/components/cart/cart.component.html
+++ b/angular/online learning system/src/app/components/cart/cart.component.html
@@ -1,4 +1,6 @@
 <div class="container">
+  <h1>My Wishlist</h1>
+  <hr />
   <div class="card" *ngFor="let course of cart; let j = index">
     <div class="card-img">
       <img
