--- a/angular/online learning system/src/app/components/courses/courses.component.css
+++ b/angular/online learning system/src/app/components/courses/courses.component.css
@@ -9,6 +9,14 @@
   display: flex;
   align-items: start;
 }
+.searchbar {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  margin-left: 30px;
+  justify-content: center;
+  gap: 45px;
+}
 
 .filter {
   width: 20%;
@@ -27,20 +35,22 @@ select {
   background-color: #161d29;
 }
 
-.searchbar {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 45px;
-}
-
 .btn {
   background-color: #ffd60a;
   padding: 10px;
   width: 100px;
   color: rgba(1, 9, 20, 255);
   font-weight: bold;
+}
+
+.load-more {
+  margin-top: 30px;
+  border-radius: 10px;
+  background-color: #ffd60a;
+  padding: 10px;
+  color: rgba(1, 9, 20, 255);
+  font-weight: bold;
+  margin-bottom: 30px;
 }
 
 .courses {
